fix: focus was showing on mobile due to custom styling

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -17,11 +17,6 @@ main {
   @apply max-w-[1440px] mx-auto;
 }
 
-*:focus {
-  @apply outline-1 outline-focus shadow-md shadow-focus;
-
-}
-
 
 
 @layer utilities {
